--- a/assets/SASS/main.css
+++ b/assets/SASS/main.css
@@ -16,11 +16,11 @@ h1 {
 .calculator {
   width: 300px;
   background: #666666;
-  margin: 5% auto;
+  margin: 10% auto;
   padding: 2rem;
   border: 2px solid #555;
   border-radius: 8px;
-  box-shadow: 2px 2px 8px #ccc;
+  box-shadow: 2px 2px 18px #666;
 }
 
 .calculatorBody {
