--- a/assets/SASS/main.scss
+++ b/assets/SASS/main.scss
@@ -2,7 +2,6 @@
     font-family: 'Calculator';
     src: url(../fonts/Calculator.ttf);
 }
-
 body{
     background: #cdcdcd;
 }
@@ -15,11 +14,11 @@ h1{
 .calculator {
     width: 300px;
     background: #666666;
-    margin: 5% auto;
+    margin: 10% auto;
     padding: 2rem;
     border: 2px solid #555;
     border-radius: 8px;
-    box-shadow: 2px 2px 8px #ccc;
+    box-shadow: 2px 2px 18px #666;
 }
 .calculatorBody {
     display: grid;
