--- a/assets/SASS/main.css
+++ b/assets/SASS/main.css
@@ -2,6 +2,18 @@
   font-family: "Calculator";
   src: url(../fonts/Calculator.ttf);
 }
+@font-face {
+  font-family: "OpenSans";
+  src: url(../fonts/Open_Sans/OpenSans-VariableFont_wdth\,wght.ttf);
+}
+@font-face {
+  font-family: "OpenSansItalic";
+  src: url(../fonts/Open_Sans/OpenSans-Italic-VariableFont_wdth\,wght.ttf);
+}
+@font-face {
+  font-family: "Poppins-Black";
+  src: url(../fonts/Poppins-Black.ttf);
+}
 body {
   background: #cdcdcd;
 }
@@ -15,7 +27,7 @@ h1 {
 
 .calculator {
   width: 300px;
-  background: #666666;
+  background: linear-gradient(45deg, #666666, #555555);
   margin: 10% auto;
   padding: 2rem;
   border: 2px solid #555;
@@ -58,7 +70,9 @@ h1 {
   background: #333;
   border: 1px solid #323232;
   border-radius: 4px;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
+  text-align: center;
+  font-family: "Poppins-Black";
 }
 
 .operator {
@@ -66,7 +80,8 @@ h1 {
   color: #111;
   border: 1px solid #666;
   border-radius: 4px;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
+  font-weight: bold;
   margin-left: 1.5rem;
 }
 
@@ -82,6 +97,7 @@ button {
   font-size: 1.2rem;
   color: #fff;
   box-shadow: 1px 1px 4px #333;
+  font-family: "OpenSans";
 }
 
 button:hover {
@@ -95,6 +111,7 @@ footer {
   right: 0.5rem;
   font-size: 0.6rem;
   color: #666;
+  font-family: "OpenSansItalic";
 }
 footer p {
   padding: 0;
