--- a/assets/SASS/main.css
+++ b/assets/SASS/main.css
@@ -11,8 +11,8 @@
   src: url(../fonts/Open_Sans/OpenSans-Italic-VariableFont_wdth\,wght.ttf);
 }
 @font-face {
-  font-family: "Poppins-Black";
-  src: url(../fonts/Poppins-Black.ttf);
+  font-family: "Poppins-Bold";
+  src: url(../fonts/Poppins-Bold.ttf);
 }
 body {
   background: #cdcdcd;
@@ -72,7 +72,7 @@ h1 {
   border-radius: 4px;
   font-size: 1.2rem;
   text-align: center;
-  font-family: "Poppins-Black";
+  font-family: "Poppins-Bold";
 }
 
 .operator {
