--- a/assets/SASS/main.css
+++ b/assets/SASS/main.css
@@ -63,6 +63,7 @@ h1 {
   font-size: 2.5rem;
   margin: 4px auto;
   text-shadow: 0 0 4px #cdcdcd;
+  overflow: hidden;
 }
 
 #clear {
@@ -103,6 +104,8 @@ button {
 button:hover {
   background: #4e4e4e;
   box-shadow: none;
+  border: 1px solid #222;
+  transition: all 0.5s ease-out;
 }
 
 footer {
